--- a/config/sync/views.view.acquia_search.yml
+++ b/config/sync/views.view.acquia_search.yml
@@ -474,6 +474,80 @@ display:
             multi_separator: ', '
           entity_type: media
           plugin_id: search_api_field
+        type_1:
+          id: type_1
+          table: search_api_datasource_acquia_search_index_entity_node
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: '{{ type_1__target_id }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: false
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          field_rendering: false
+          fallback_handler: search_api_entity
+          fallback_options:
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
+            display_methods:
+              node_type:
+                display_method: id
+          entity_type: node
+          plugin_id: search_api_field
         title:
           id: title
           table: search_api_index_acquia_search_index
@@ -485,7 +559,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: "{% if field_call_to_action  is not empty %}\r\n<a href=\"{{ field_call_to_action }}\" target=\"_blank\" data-category=\"Search\" data-action=\"Auto Suggestion Click\" data-label=\"{{ title|striptags }}\" title=\"{{ title|striptags }}\" ><div class=\"views-field views-field-title\"><span class=\"field-content\">{{ title }}</span></div></a>\r\n{%  elseif field_media is not empty %}\r\n<a href=\"{{ field_media_file }}\" target=\"_blank\" data-category=\"Search\" data-action=\"Auto Suggestion Click\" data-label=\"{{ title|striptags }}\" title=\"{{ title|striptags }}\" ><div class=\"views-field views-field-title\"><span class=\"field-content\">{{ title }}</span></div></a>\r\n{% else %}\r\n<a href=\"/node/{{ nid }}\" data-category=\"Search\" data-action=\"Auto Suggestion Click\" data-label=\"{{ title|striptags }}\" title=\"{{ title|striptags }}\" ><div class=\"views-field views-field-title\"><span class=\"field-content\">{{ title }}</span></div></a>\r\n{% endif %}\r\n"
+            text: "{% if field_call_to_action  is not empty %}\r\n<a href=\"{{ field_call_to_action }}\" target=\"_blank\" data-category=\"Search\" data-action=\"Auto Suggestion Click\" data-label=\"{{ title|striptags }}\" title=\"{{ title|striptags }}\" ><div class=\"views-field views-field-title\"><span class=\"field-content\">{{ title }}</span></div></a>\r\n{%  elseif field_media is not empty and type_1 != \"product\" %}\r\n<a href=\"{{ field_media_file }}\" target=\"_blank\" data-category=\"Search\" data-action=\"Auto Suggestion Click\" data-label=\"{{ title|striptags }}\" title=\"{{ title|striptags }}\" ><div class=\"views-field views-field-title\"><span class=\"field-content\">{{ title }}</span></div></a>\r\n{% else %}\r\n<a href=\"/node/{{ nid }}\" data-category=\"Search\" data-action=\"Auto Suggestion Click\" data-label=\"{{ title|striptags }}\" title=\"{{ title|striptags }}\" ><div class=\"views-field views-field-title\"><span class=\"field-content\">{{ title }}</span></div></a>\r\n{% endif %}\r\n"
             make_link: false
             path: ''
             absolute: false
