--- a/config/sync/field.field.node.page.field_is_product.yml
+++ b/config/sync/field.field.node.page.field_is_product.yml
@@ -12,7 +12,7 @@ bundle: page
 label: 'Is it a Product'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
