--- a/config/sync/views.view.acquia_search.yml
+++ b/config/sync/views.view.acquia_search.yml
@@ -63,7 +63,7 @@ display:
           items_per_page: 10
           offset: 0
           id: 0
-          total_pages: 4
+          total_pages: null
           tags:
             previous: ‹
             next: ›
