--- a/config/sync/block.block.exposedformproduct_support_cardsprod_support_doc_list.yml
+++ b/config/sync/block.block.exposedformproduct_support_cardsprod_support_doc_list.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - cohesion
     - collapsiblock
+    - node
     - system
     - views
   theme:
@@ -35,3 +36,10 @@ visibility:
     id: request_path
     pages: "/service-and-support/*\r\n!/service-and-support/eol-devices/*"
     negate: false
+  node_type:
+    id: node_type
+    bundles:
+      product: product
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
