--- a/config/sync/block.block.views_block__product_support_cards_eol_device.yml
+++ b/config/sync/block.block.views_block__product_support_cards_eol_device.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - cohesion
     - collapsiblock
+    - node
     - system
     - views
   theme:
@@ -37,3 +38,10 @@ visibility:
     id: request_path
     pages: '/service-and-support/eol-devices/*'
     negate: false
+  node_type:
+    id: node_type
+    bundles:
+      product: product
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
