VER2-1605: Trimmed the body field value to 150

--- a/config/sync/views.view.acquia_search.yml
+++ b/config/sync/views.view.acquia_search.yml
@@ -774,7 +774,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{{ type }}\r\n{{ title }}\r\n{{ created }}\r\n{{ body }}"
+            text: "{{ type }}\r\n{{ title }}\r\n{{ created }}\r\n{{ body|length > 200 ? body|slice(0, 150)|raw ~ '...' : body|raw }}"
             make_link: false
             path: ''
             absolute: false
