there were only three paginations allowed and i changed it to unlimited in the product support document page

--- a/config/sync/views.view.product_support_cards.yml
+++ b/config/sync/views.view.product_support_cards.yml
@@ -2902,7 +2902,7 @@ display:
           items_per_page: 10
           offset: 0
           id: 0
-          total_pages: 3
+          total_pages: null
           tags:
             previous: ‹
             next: ›
