--- a/config/sync/search_api.server.acquia_search_server.yml
+++ b/config/sync/search_api.server.acquia_search_server.yml
@@ -8,19 +8,19 @@ dependencies:
     - search_api_solr.solr_cache.cache_filter_default_7_0_0
     - search_api_solr.solr_cache.cache_persegfilter_default_7_0_0
     - search_api_solr.solr_cache.cache_queryresult_default_7_0_0
-    - search_api_solr.solr_field_type.text_de_6_0_0
-    - search_api_solr.solr_field_type.text_edge_und_6_0_0
+    - search_api_solr.solr_field_type.text_de_7_0_0
+    - search_api_solr.solr_field_type.text_edge_und_7_0_0
     - search_api_solr.solr_field_type.text_edgestring_und_6_0_0
-    - search_api_solr.solr_field_type.text_en_6_0_0
-    - search_api_solr.solr_field_type.text_fr_6_0_0
-    - search_api_solr.solr_field_type.text_ngram_und_6_0_0
+    - search_api_solr.solr_field_type.text_en_7_0_0
+    - search_api_solr.solr_field_type.text_fr_7_0_0
+    - search_api_solr.solr_field_type.text_ngram_und_7_0_0
     - search_api_solr.solr_field_type.text_ngramstring_und_6_0_0
-    - search_api_solr.solr_field_type.text_nl_6_0_0
+    - search_api_solr.solr_field_type.text_nl_7_0_0
     - search_api_solr.solr_field_type.text_phonetic_de_7_0_0
     - search_api_solr.solr_field_type.text_phonetic_en_7_0_0
     - search_api_solr.solr_field_type.text_phonetic_fr_7_0_0
     - search_api_solr.solr_field_type.text_phonetic_und_7_0_0
-    - search_api_solr.solr_field_type.text_und_6_0_0
+    - search_api_solr.solr_field_type.text_und_7_0_0
     - search_api_solr.solr_request_dispatcher.request_dispatcher_httpcachingnever_default_7_0_0
     - search_api_solr.solr_request_handler.request_handler_autocomplete_default_7_0_0
     - search_api_solr.solr_request_handler.request_handler_extract_default_7_0_0
@@ -47,10 +47,10 @@ backend_config:
     api_host: 'https://api.sr-prod02.acquia.com'
     skip_schema_check: true
     scheme: http
-    host: localhost
+    host: s7003-us-west-2.sr-prod02.acquia.com
     port: 8983
-    path: /
-    core: ''
+    path: /solr/LUYZ-204244.prod.verathon
+    core: LUYZ-204244.prod.verathon
     timeout: 5
     index_timeout: 5
     optimize_timeout: 10
@@ -60,6 +60,8 @@ backend_config:
     commit_within: 1000
     jmx: false
     solr_install_dir: ''
+    key: search_api_solr
+    overridden_by_acquia_search: 1
   disabled_field_types: {  }
   disabled_caches: {  }
   disabled_request_handlers:
