--- a/config/sync/search_api.index.acquia_search_index.yml
+++ b/config/sync/search_api.index.acquia_search_index.yml
@@ -1,6 +1,6 @@
 uuid: 806b32b9-b0bf-434f-b5c4-5e6d4b2958d1
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search_api_solr
@@ -20,7 +20,6 @@ dependencies:
     - field.storage.node.field_role
     - field.storage.node.field_topic
     - field.storage.node.field_year
-    - search_api.server.acquia_search_server
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -261,25 +260,25 @@ datasource_settings:
   'entity:cohesion_layout':
     languages:
       default: true
-      selected: {  }
+      selected: {}
   'entity:component_content':
     languages:
       default: true
-      selected: {  }
+      selected: {}
   'entity:node':
     bundles:
       default: true
-      selected: {  }
+      selected: {}
     languages:
       default: true
-      selected: {  }
+      selected: {}
 processor_settings:
-  add_url: {  }
-  aggregated_field: {  }
+  add_url: {}
+  aggregated_field: {}
   content_access:
     weights:
       preprocess_query: -30
-  entity_status: {  }
+  entity_status: {}
   highlight:
     highlight: server
     highlight_partial: false
@@ -317,8 +316,8 @@ processor_settings:
     weights:
       preprocess_index: -47
       preprocess_query: -15
-  language_with_fallback: {  }
-  rendered_item: {  }
+  language_with_fallback: {}
+  rendered_item: {}
   solr_date_range:
     weights:
       preprocess_index: 0
@@ -350,4 +349,4 @@ tracker_settings:
 options:
   index_directly: true
   cron_limit: 50
-server: acquia_search_server
+server: null
