--- a/config/sync/core.entity_view_display.node.event.event_and_live_webinars.yml
+++ b/config/sync/core.entity_view_display.node.event.event_and_live_webinars.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.event_and_live_webinars
     - field.field.node.event.body
+    - field.field.node.event.field_call_to_action
     - field.field.node.event.field_categories
     - field.field.node.event.field_contact_number
     - field.field.node.event.field_contact_person
@@ -60,6 +61,7 @@ hidden:
   entity_print_view_epub: true
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
+  field_call_to_action: true
   field_categories: true
   field_contact_number: true
   field_contact_person: true
