--- a/config/sync/search_api.index.acquia_search_index.yml
+++ b/config/sync/search_api.index.acquia_search_index.yml
@@ -1,6 +1,6 @@
 uuid: 806b32b9-b0bf-434f-b5c4-5e6d4b2958d1
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - search_api_solr
@@ -20,6 +20,7 @@ dependencies:
     - field.storage.node.field_role
     - field.storage.node.field_topic
     - field.storage.node.field_year
+    - search_api.server.acquia_search_server
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -260,25 +261,25 @@ datasource_settings:
   'entity:cohesion_layout':
     languages:
       default: true
-      selected: {}
+      selected: {  }
   'entity:component_content':
     languages:
       default: true
-      selected: {}
+      selected: {  }
   'entity:node':
     bundles:
       default: true
-      selected: {}
+      selected: {  }
     languages:
       default: true
-      selected: {}
+      selected: {  }
 processor_settings:
-  add_url: {}
-  aggregated_field: {}
+  add_url: {  }
+  aggregated_field: {  }
   content_access:
     weights:
       preprocess_query: -30
-  entity_status: {}
+  entity_status: {  }
   highlight:
     highlight: server
     highlight_partial: false
@@ -314,10 +315,10 @@ processor_settings:
       h3: 2
       strong: 2
     weights:
-      preprocess_index: -47
+      preprocess_index: -15
       preprocess_query: -15
-  language_with_fallback: {}
-  rendered_item: {}
+  language_with_fallback: {  }
+  rendered_item: {  }
   solr_date_range:
     weights:
       preprocess_index: 0
@@ -332,7 +333,6 @@ processor_settings:
         bundle_boosts:
           article: !!float 5
           clinical_publications: !!float 8
-          country_and_region: !!float 0
           event: 0.1
           instructional_videos: !!float 13
           news: !!float 3
@@ -342,11 +342,11 @@ processor_settings:
           product: 0.1
           product_documentation: !!float 21
     weights:
-      preprocess_index: -48
+      preprocess_index: 0
 tracker_settings:
   default:
     indexing_order: fifo
 options:
   index_directly: true
   cron_limit: 50
-server: null
+server: acquia_search_server
