--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -2,5 +2,6 @@ ignored_config_entities:
   - search_api.server.acquia_search_server
   - search_api.index.acquia_search_index
   - trailing_slash.settings
+  - cohesion_templates.cohesion_master_templates.master_template
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
