--- a/config/sync/views.view.product_support_cards.yml
+++ b/config/sync/views.view.product_support_cards.yml
@@ -1854,6 +1854,7 @@ display:
         style: false
         row: false
         relationships: false
+        empty: false
       fields:
         field_product_line:
           id: field_product_line
@@ -1918,18 +1919,18 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        tid:
-          id: tid
-          table: taxonomy_term_field_data
-          field: tid
-          relationship: field_product_line
+        nid:
+          id: nid
+          table: node_field_data
+          field: nid
+          relationship: none
           group_type: group
           admin_label: ''
           label: ''
           exclude: true
           alter:
             alter_text: false
-            text: ''
+            text: '<a href="/node/{{nid}}">{{title}}</a>'
             make_link: false
             path: ''
             absolute: false
@@ -1981,8 +1982,8 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: taxonomy_term
-          entity_field: tid
+          entity_type: node
+          entity_field: nid
           plugin_id: field
         title:
           id: title
@@ -2049,11 +2050,11 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
-        nid:
-          id: nid
-          table: node_field_data
-          field: nid
-          relationship: none
+        tid:
+          id: tid
+          table: taxonomy_term_field_data
+          field: tid
+          relationship: field_product_line
           group_type: group
           admin_label: ''
           label: ''
@@ -2094,7 +2095,7 @@ display:
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
-          hide_empty: false
+          hide_empty: true
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
@@ -2112,8 +2113,8 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: node
-          entity_field: nid
+          entity_type: taxonomy_term
+          entity_field: tid
           plugin_id: field
       footer: {  }
       filters:
@@ -2253,6 +2254,20 @@ display:
           admin_label: 'field_product_line: Taxonomy term'
           required: false
           plugin_id: standard
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: '<h3> No Results Found! </h3>'
+            format: filtered_html
+          plugin_id: text
     cache_metadata:
       max-age: -1
       contexts:
