--- a/config/sync/field.field.node.instructional_videos.field_video_url.yml
+++ b/config/sync/field.field.node.instructional_videos.field_video_url.yml
@@ -11,7 +11,7 @@ entity_type: node
 bundle: instructional_videos
 label: 'Video URL'
 description: 'Enter the video URL.'
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
