Adding changes for the premium content element.

--- a/config/sync/search_api.index.acquia_search_index.yml
+++ b/config/sync/search_api.index.acquia_search_index.yml
@@ -10,6 +10,7 @@ dependencies:
   config:
     - field.storage.node.body
     - field.storage.node.field_article_type
+    - field.storage.node.field_call_to_action
     - field.storage.node.field_department
     - field.storage.node.field_document
     - field.storage.node.field_job_title
@@ -93,6 +94,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_article_type
+  field_call_to_action:
+    label: 'Call To Action'
+    datasource_id: 'entity:node'
+    property_path: field_call_to_action
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_call_to_action
   field_department:
     label: Department
     datasource_id: 'entity:node'
@@ -296,6 +305,7 @@ processor_settings:
     fields:
       - body
       - component
+      - field_call_to_action
       - field_department
       - field_job_title
       - field_topic
@@ -310,10 +320,12 @@ processor_settings:
     alt: true
     tags:
       b: 2
+      em: 1
       h1: 5
       h2: 3
       h3: 2
       strong: 2
+      u: 1
     weights:
       preprocess_index: -15
       preprocess_query: -15
@@ -333,16 +345,17 @@ processor_settings:
         bundle_boosts:
           article: !!float 5
           clinical_publications: !!float 8
+          country_and_region: !!float 0
           event: 0.1
           instructional_videos: !!float 13
           news: !!float 3
-          page: 0.2
+          page: !!float 2
           person: 0.1
           place: 0.1
           product: 0.1
           product_documentation: !!float 21
     weights:
-      preprocess_index: 0
+      preprocess_index: -48
 tracker_settings:
   default:
     indexing_order: fifo
