--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -152,6 +152,7 @@ module:
   views_block_filter_block: 0
   views_ui: 0
   webform: 0
+  webform_node: 0
   webform_ui: 0
   workbench_email: 0
   workflows: 0
