--- a/config/sync/views.view.product_support_cards.yml
+++ b/config/sync/views.view.product_support_cards.yml
@@ -3284,6 +3284,7 @@ display:
         style: false
         row: false
         relationships: false
+        sorts: false
       fields:
         field_product_line:
           id: field_product_line
@@ -3732,6 +3733,21 @@ display:
           group_type: group
           admin_label: 'field_product_line: Taxonomy term'
           required: false
+          plugin_id: standard
+      sorts:
+        weight:
+          id: weight
+          table: taxonomy_term_field_data
+          field: weight
+          relationship: field_product_line
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: taxonomy_term
+          entity_field: weight
           plugin_id: standard
     cache_metadata:
       max-age: -1
