--- a/config/sync/core.entity_view_display.node.article.card.yml
+++ b/config/sync/core.entity_view_display.node.article.card.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.article.field_categories
     - field.field.node.article.field_department
     - field.field.node.article.field_display_author
+    - field.field.node.article.field_exclude_this_page
     - field.field.node.article.field_image
     - field.field.node.article.field_procedure
     - field.field.node.article.field_product_line
@@ -65,6 +66,7 @@ hidden:
   field_categories: true
   field_department: true
   field_display_author: true
+  field_exclude_this_page: true
   field_image: true
   field_procedure: true
   field_product_line: true
