--- a/config/sync/core.entity_form_display.node.clinical_publications.default.yml
+++ b/config/sync/core.entity_form_display.node.clinical_publications.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.clinical_publications.body
     - field.field.node.clinical_publications.field_call_to_action
     - field.field.node.clinical_publications.field_department
+    - field.field.node.clinical_publications.field_exclude_this_page
     - field.field.node.clinical_publications.field_image
     - field.field.node.clinical_publications.field_procedure
     - field.field.node.clinical_publications.field_product_line
@@ -79,6 +80,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_exclude_this_page:
+    weight: 26
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_image:
     weight: 19
