--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_call_to_action
+    - field.field.node.news.field_exclude_this_page
     - field.field.node.news.field_media
     - field.field.node.news.field_news_type
     - field.field.node.news.field_select_parent
@@ -45,6 +46,13 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_exclude_this_page:
+    weight: 26
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_media:
     weight: 1
