--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.article.field_categories
     - field.field.node.article.field_department
     - field.field.node.article.field_display_author
+    - field.field.node.article.field_exclude_this_page
     - field.field.node.article.field_image
     - field.field.node.article.field_procedure
     - field.field.node.article.field_product_line
@@ -79,6 +80,16 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_exclude_this_page:
+    weight: 15
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_image:
     weight: 12
