--- a/config/sync/core.entity_view_display.node.article.education_and_training.yml
+++ b/config/sync/core.entity_view_display.node.article.education_and_training.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.article.field_categories
     - field.field.node.article.field_department
     - field.field.node.article.field_display_author
+    - field.field.node.article.field_exclude_this_page
     - field.field.node.article.field_image
     - field.field.node.article.field_procedure
     - field.field.node.article.field_product_line
@@ -141,6 +142,7 @@ hidden:
   field_article_type: true
   field_categories: true
   field_display_author: true
+  field_exclude_this_page: true
   field_procedure: true
   field_tags: true
   field_weight_to_sort: true
