--- a/config/sync/core.entity_view_display.node.clinical_publications.teaser.yml
+++ b/config/sync/core.entity_view_display.node.clinical_publications.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.clinical_publications.body
     - field.field.node.clinical_publications.field_call_to_action
     - field.field.node.clinical_publications.field_department
+    - field.field.node.clinical_publications.field_exclude_this_page
     - field.field.node.clinical_publications.field_image
     - field.field.node.clinical_publications.field_procedure
     - field.field.node.clinical_publications.field_product_line
@@ -43,6 +44,7 @@ hidden:
   entity_print_view_word_docx: true
   field_call_to_action: true
   field_department: true
+  field_exclude_this_page: true
   field_image: true
   field_procedure: true
   field_product_line: true
