--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
     - field.field.node.news.field_call_to_action
+    - field.field.node.news.field_exclude_this_page
     - field.field.node.news.field_media
     - field.field.node.news.field_news_type
     - field.field.node.news.field_select_parent
@@ -52,6 +53,7 @@ hidden:
   entity_print_view_epub: true
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
+  field_exclude_this_page: true
   field_media: true
   field_select_parent: true
   langcode: true
