--- a/config/sync/core.entity_view_display.node.webform.default.yml
+++ b/config/sync/core.entity_view_display.node.webform.default.yml
@@ -3,11 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.webform.body
     - field.field.node.webform.webform
     - node.type.webform
   module:
-    - text
     - user
     - webform
 _core:
@@ -17,25 +15,15 @@ targetEntityType: node
 bundle: webform
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
   webform:
-    weight: 102
+    weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      source_entity: true
     third_party_settings: {  }
     type: webform_entity_reference_entity_view
     region: content
 hidden:
   langcode: true
+  links: true
   search_api_excerpt: true
