--- a/config/sync/metatag.settings.yml
+++ b/config/sync/metatag.settings.yml
@@ -1,27 +1,28 @@
 entity_type_groups:
   node:
-    place:
-      basic: basic
-      open_graph: open_graph
-      schema_place: schema_place
-      twitter_cards: twitter_cards
-    person:
-      basic: basic
-      open_graph: open_graph
-      schema_person: schema_person
-      twitter_cards: twitter_cards
     article:
       basic: basic
       open_graph: open_graph
-      schema_article: schema_article
       twitter_cards: twitter_cards
+      schema_article: schema_article
     event:
       basic: basic
       open_graph: open_graph
-      schema_event: schema_event
       twitter_cards: twitter_cards
+      schema_event: schema_event
     page:
       basic: basic
+      advanced: advanced
       open_graph: open_graph
-      schema_article: schema_article
       twitter_cards: twitter_cards
+      schema_article: schema_article
+    person:
+      basic: basic
+      open_graph: open_graph
+      twitter_cards: twitter_cards
+      schema_person: schema_person
+    place:
+      basic: basic
+      open_graph: open_graph
+      twitter_cards: twitter_cards
+      schema_place: schema_place
