--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -10,8 +10,11 @@ weight: -3
 is_admin: false
 permissions:
   - 'access content'
+  - 'access toolbar'
   - 'display eu cookie compliance popup'
+  - 'provide translation services'
   - 'use search_api_autocomplete for acquia_search'
   - 'use search_api_autocomplete for et_search_block'
   - 'use search_api_autocomplete for search'
   - 'view media'
+  - 'view the administration theme'
