--- a/config/sync/views.view.product_support_cards.yml
+++ b/config/sync/views.view.product_support_cards.yml
@@ -3151,6 +3151,68 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        body:
+          id: body
+          table: node__body
+          field: body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: true
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         title:
           id: title
           table: node_field_data
@@ -3162,7 +3224,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"hero-section\">\r\n            <div class=\"support-landing-desc\">\r\n                <h6>Product support</h6>\r\n                <h1>{{ title }}</h1>\r\n            </div>\r\n            <div class=\"support-landing-container\">\r\n                <div class=\"support-landing-img\">\r\n                    {{ field_media }}\r\n                </div>\r\n            </div>\r\n        </div>"
+            text: "<div class=\"hero-section\">\r\n            <div class=\"support-landing-desc\">\r\n                <h6>Product support</h6>\r\n                {{ body }}\r\n                <h1>{{ title }}</h1>\r\n            </div>\r\n            <div class=\"support-landing-container\">\r\n                <div class=\"support-landing-img\">\r\n                    {{ field_media }}\r\n                </div>\r\n            </div>\r\n        </div>"
             make_link: false
             path: ''
             absolute: false
@@ -3296,6 +3358,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_media'
   product_support_card:
     display_plugin: block
