Added a field weight to the product and configured product view to display the products according to the weights. Also created a image style for Banner component images only for Desktop

--- a/config/sync/core.entity_view_display.node.product.teaser.yml
+++ b/config/sync/core.entity_view_display.node.product.teaser.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.product.field_no_longer_supported
     - field.field.node.product.field_product_documentation
     - field.field.node.product.field_product_line
+    - field.field.node.product.field_weight_to_sort
     - node.type.product
   module:
     - text
@@ -45,5 +46,6 @@ hidden:
   field_no_longer_supported: true
   field_product_documentation: true
   field_product_line: true
+  field_weight_to_sort: true
   langcode: true
   search_api_excerpt: true
