--- a/config/sync/core.entity_form_display.node.product.default.yml
+++ b/config/sync/core.entity_form_display.node.product.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.product.field_no_longer_supported
     - field.field.node.product.field_product_documentation
     - field.field.node.product.field_product_line
+    - field.field.node.product.field_weight_to_sort
     - node.type.product
   module:
     - cohesion_elements
@@ -90,6 +91,12 @@ content:
     region: content
   field_product_line:
     weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_weight_to_sort:
+    weight: 26
     settings: {  }
     third_party_settings: {  }
     type: options_select
