--- a/config/sync/core.entity_view_display.node.product.default.yml
+++ b/config/sync/core.entity_view_display.node.product.default.yml
@@ -11,14 +11,23 @@ dependencies:
     - field.field.node.product.field_no_longer_supported
     - field.field.node.product.field_product_documentation
     - field.field.node.product.field_product_line
+    - field.field.node.product.field_weight_to_sort
     - node.type.product
   module:
+    - options
     - user
 id: node.product.default
 targetEntityType: node
 bundle: product
 mode: default
-content: {  }
+content:
+  field_weight_to_sort:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
 hidden:
   body: true
   entity_print_view_epub: true
